@@ -245,6 +245,7 @@ print_rdefaults(void)		/* print default render values to stdout */
 			colval(salbedo,GRN), colval(salbedo,BLU));
 	printf("-mg %f\t\t\t# mist scattering eccentricity\n", seccg);
 	printf("-ms %f\t\t\t# mist sampling distance\n", ssampdist);
-	printf("-lr %-9d\t\t\t# limit reflection\n", maxdepth);
+	printf("-lr %-9d\t\t\t# limit reflection%s\n", maxdepth,
+			maxdepth<=0 ? " (Russian roulette)" : "");
 	printf("-lw %f\t\t\t# limit weight\n", minweight);
 }
